--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,49 +17,116 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/nameTextEditSignUpA"
-        style="@style/text_style"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nameTextEditSignUpAFrame"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/user_name_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/surnameEditTextSignUpA"
+        android:layout_marginTop="100dp"
+        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.831" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/surnameEditTextSignUpA"
-        style="@style/text_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/user_surname_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/emailEditTextSignUpA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.909" />
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/nameTextEditSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
 
-    <EditText
-        android:id="@+id/addressEditTextSignUpA"
-        android:layout_width="wrap_content"
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/surnameEditTextSignUpAFrame"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/user_address_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/signUpButtonSignUpA"
+        android:layout_marginTop="20dp"
+        android:hint="Surname"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.918" />
+        app:layout_constraintTop_toBottomOf="@id/nameTextEditSignUpAFrame">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/surnameEditTextSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/emailEditTextSignUpAFrame"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="E-mail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/surnameEditTextSignUpAFrame">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/emailEditTextSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordEditTextSignUpAFrame"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailEditTextSignUpAFrame"
+        app:passwordToggleEnabled="true">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/passwordEditTextSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password2EditTextSignUpAFrame"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordEditTextSignUpAFrame"
+        app:passwordToggleEnabled="true">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/password2EditTextSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/addressEditTextSignUpAFrame"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/password2EditTextSignUpAFrame">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/addressEditTextSignUpA"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAlignment="textStart"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/signUpButtonSignUpA"
@@ -70,63 +137,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.86" />
-
-    <EditText
-        android:id="@+id/emailEditTextSignUpA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/email_hint"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextSignUpA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.907" />
-
-    <EditText
-        android:id="@+id/passwordEditTextSignUpA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/password2EditTextSignUpA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.937" />
-
-    <EditText
-        android:id="@+id/password2EditTextSignUpA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/addressEditTextSignUpA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.94" />
+        app:layout_constraintTop_toBottomOf="@id/addressEditTextSignUpAFrame" />
 
     <ProgressBar
         android:id="@+id/progressBarSignUpA"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_bias="0.498"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.86"
+        app:layout_constraintTop_toBottomOf="@id/addressEditTextSignUpAFrame"
         android:layout_marginBottom="32dp"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
