--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="userInfo"
-            type="com.example.quokka.UserInfo" />
+            type="com.app.quokka.UserInfo" />
     </data>
 
 <FrameLayout
