--- a/app/src/main/res/layout/activity_full_task.xml
+++ b/app/src/main/res/layout/activity_full_task.xml
@@ -135,19 +135,19 @@ tools:context=".tasks.FullTaskActivity">
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fullButtonBack"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fullTaskEndDateFrame"/>
 
-    <Button
-        android:id="@+id/fullButtonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fullButtonTakeTask"
-        app:layout_constraintTop_toBottomOf="@id/fullTaskEndDateFrame"/>
+<!--    <Button-->
+<!--        android:id="@+id/fullButtonBack"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="BACK"-->
+<!--        android:textSize="16dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/fullButtonTakeTask"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/fullTaskEndDateFrame"/>-->
 
 
     <!--<TextView-->
