--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/logInActivity">
     <fragment
         android:id="@+id/logInFragment"
-        android:name="com.example.quokka.unlogged.LogInFragment"
+        android:name="com.app.quokka.unlogged.LogInFragment"
         android:label="fragment_log_in"
         tools:layout="@layout/fragment_log_in" >
         <action
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.quokka.unlogged.SignUpFragment"
+        android:name="com.app.quokka.unlogged.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" >
         <action
@@ -36,7 +36,7 @@
     </fragment>
     <fragment
         android:id="@+id/userMainScreenFragment"
-        android:name="com.example.quokka.logged.UserMainScreenFragment"
+        android:name="com.app.quokka.logged.UserMainScreenFragment"
         android:label="fragment_user_main_screen"
         tools:layout="@layout/fragment_user_main_screen" >
         <action
@@ -57,47 +57,41 @@
     </fragment>
     <fragment
         android:id="@+id/availableTasksBrowser"
-        android:name="com.example.quokka.logged.AvailableTasksBrowser"
+        android:name="com.app.quokka.logged.AvailableTasksBrowser"
         android:label="fragment_available_tasks_browser"
         tools:layout="@layout/fragment_available_tasks_browser" >
-        <action
-            android:id="@+id/action_availableTasksBrowser_to_fullTaskFragment"
-            app:destination="@id/fullTaskFragment" />
     </fragment>
     <fragment
         android:id="@+id/userProfile"
-        android:name="com.example.quokka.logged.UserProfile"
+        android:name="com.app.quokka.logged.UserProfile"
         android:label="fragment_user_profile"
         tools:layout="@layout/fragment_user_profile" />
     <fragment
         android:id="@+id/addTaskScreen"
-        android:name="com.example.quokka.AddTaskScreen"
+        android:name="com.app.quokka.AddTaskScreen"
         android:label="fragment_add_task_screen"
         tools:layout="@layout/fragment_add_task_screen" />
     <fragment
         android:id="@+id/taskFragment"
-        android:name="com.example.quokka.TaskFragment"
+        android:name="com.app.quokka.TaskFragment"
         android:label="fragment_task"
         tools:layout="@layout/fragment_task" />
     <fragment
         android:id="@+id/inProgressFragment"
-        android:name="com.example.quokka.logged.InProgressFragment"
+        android:name="com.app.quokka.logged.InProgressFragment"
         android:label="InProgressFragment" >
         <action
-            android:id="@+id/action_inProgressFragment_to_fullTaskFragment"
-            app:destination="@id/fullTaskFragment" />
+            android:id="@+id/action_inProgressFragment_to_taskFragment"
+            app:destination="@id/taskFragment" />
     </fragment>
     <fragment
         android:id="@+id/userTasksFragment"
-        android:name="com.example.quokka.logged.UserTasksFragment"
+        android:name="com.app.quokka.logged.UserTasksFragment"
         android:label="UserTasksFragment" >
-        <action
-            android:id="@+id/action_userTasksFragment_to_fullTaskFragment"
-            app:destination="@id/fullTaskFragment" />
     </fragment>
     <fragment
         android:id="@+id/showUsers"
-        android:name="com.example.quokka.ShowUsers"
+        android:name="com.app.quokka.ShowUsers"
         android:label="ShowUsers" >
         <action
             android:id="@+id/action_showUsers_to_signUpFragment"
@@ -105,10 +99,6 @@
     </fragment>
     <activity
         android:id="@+id/logInActivity"
-        android:name="com.example.quokka.unlogged.LogInActivity"
+        android:name="com.app.quokka.unlogged.LogInActivity"
         android:label="LogInActivity" />
-    <fragment
-        android:id="@+id/fullTaskFragment"
-        android:name="com.example.quokka.FullTaskFragment"
-        android:label="FullTaskFragment" />
 </navigation>
